k8s/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youves-__PROJECT_NAME__
  namespace: youves-__NAMESPACE_NAME__
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - youves-__PROJECT_NAME__.dev.gke.papers.tech
      secretName: __PROJECT_NAME__-dev-tls
  rules:
    - host: youves-__PROJECT_NAME__.dev.gke.papers.tech
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: youves-__PROJECT_NAME__-service
                port:
                  number: 80
